<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background1">
    <ImageButton
            android:layout_width="@dimen/button_back_width"
            android:layout_height="@dimen/button_back_height"
            android:id="@id/button_back" android:layout_alignParentLeft="true"
            android:background="@drawable/back" android:layout_alignParentBottom="true"
            android:onClick="backToMenu"
            android:layout_marginLeft="@dimen/button_back_margin"
            android:layout_marginBottom="@dimen/button_history_margin"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TableRow
                android:layout_marginBottom="@dimen/about_table_margin_bottom">

            <ImageView
                    android:layout_width="@dimen/about_image_size"
                    android:layout_height="@dimen/about_image_size"
                    android:id="@+id/about_image_0" android:layout_alignParentTop="true"
                    android:layout_alignLeft="@id/button_back" android:background="@drawable/cookie_0"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text_0"
                    android:id="@+id/about_text_0" style="@style/AboutText"
                    android:layout_marginBottom="@dimen/about_text_margin_bottom"
                    android:layout_marginLeft="@dimen/about_text_margin_left"/>
        </TableRow>
        <TableRow
                android:layout_marginBottom="@dimen/about_table_margin_bottom"
                >

            <ImageView
                    android:layout_width="@dimen/about_image_size"
                    android:layout_height="@dimen/about_image_size"
                    android:id="@+id/about_image_1" android:layout_alignParentTop="true"
                    android:layout_alignLeft="@id/button_back" android:background="@drawable/cookie_1"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text_1"
                    android:id="@+id/about_text_1" style="@style/AboutText"
                    android:layout_marginBottom="@dimen/about_text_margin_bottom"
                    android:layout_marginLeft="@dimen/about_text_margin_left"/>
        </TableRow>
        <TableRow
                android:layout_marginBottom="@dimen/about_table_margin_bottom"
                >

            <ImageView
                    android:layout_width="@dimen/about_image_size"
                    android:layout_height="@dimen/about_image_size"
                    android:id="@+id/about_image_2" android:layout_alignParentTop="true"
                    android:layout_alignLeft="@id/button_back" android:background="@drawable/cookie_2"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text_2"
                    android:id="@+id/about_text_2" style="@style/AboutText"
                    android:layout_marginBottom="@dimen/about_text_margin_bottom"
                    android:layout_marginLeft="@dimen/about_text_margin_left"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="@dimen/about_table_margin_bottom">

            <ImageView
                    android:layout_width="@dimen/about_image_size"
                    android:layout_height="@dimen/about_image_size"
                    android:id="@+id/about_image_3" android:layout_alignParentTop="true"
                    android:layout_alignLeft="@id/button_back" android:background="@drawable/cookie_3"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text_3"
                    android:id="@+id/about_text_3" style="@style/AboutText"
                    android:layout_marginBottom="@dimen/about_text_margin_bottom"
                    android:layout_marginLeft="@dimen/about_text_margin_left"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="@dimen/about_table_margin_bottom">

            <ImageView
                    android:layout_width="@dimen/about_image_size"
                    android:layout_height="@dimen/about_image_size"
                    android:id="@+id/about_image_4" android:layout_alignParentTop="true"
                    android:layout_alignLeft="@id/button_back" android:background="@drawable/cookie_4"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text_4"
                    android:id="@+id/about_text_4" style="@style/AboutText"
                    android:layout_marginBottom="@dimen/about_text_margin_bottom"
                    android:layout_marginLeft="@dimen/about_text_margin_left"/>
        </TableRow>

        <TableRow
                android:layout_marginBottom="@dimen/about_table_margin_bottom">

            <ImageView
                    android:layout_width="@dimen/about_image_size"
                    android:layout_height="@dimen/about_image_size"
                    android:id="@+id/about_image_5" android:layout_alignParentTop="true"
                    android:layout_alignLeft="@id/button_back" android:background="@drawable/cookie_5"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text_5"
                    android:id="@+id/about_text_5" style="@style/AboutText"
                    android:layout_marginBottom="@dimen/about_text_margin_bottom"
                    android:layout_marginLeft="@dimen/about_text_margin_left"/>

        </TableRow>
    </TableLayout>
</RelativeLayout>